# vdotapes

./: .eslintignore  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc  AGENTS.md  CLAUDE.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_TASKS.md  COMPREHENSIVE_CODE_REVIEW.md  DROID.md  MODULAR_REFACTORING_GUIDE.md  PERFORMANCE-REVIEW.md  PERFORMANCE_PLAN.md  PERFORMANCE_TASKS.md  README.md  compatibilityReport.md  features.md  main.js  memory-profile.js  optimization-test-results.json  package-lock.json  package.json  performance-benchmark.js  preload.js  refactor_workflow.md  standalone-test-results.json  tasks.md  test-optimizations.js  test-rust-modules.js  test-standalone-optimizations.js  test-thumbnail-wrapper.js  vidgrid_refactored.html  workflow.md
.vdotapes/: videos.db
app/: index.html  renderer.js  renderer.js.backup  styles.css  tsconfig.json  video-grid-virtualizer.js  video-lifecycle.js  video-smart-loader.js  video-virtual-grid.js  video-virtualization.js  video-wasm-loader.js  wasm-init.js
docs/: 01-video-virtualization.md  02-video-element-cleanup.md  03-database-indexing.md  04-video-metadata-extraction.md  05-cancellable-operations.md  ARCHITECTURE_ANALYSIS.md  BUG_FIX_ROW_20_LOADING.md  CLAUDE.md  CRITICAL_FIXES_APPLIED.md  DATABASE_OPTIMIZATION_6K_VIDEOS.md  FIXES_REIMPLEMENTED.md  HARDWARE_ACCELERATION_CHECK.md  INTEGRATION_STATUS.md  NATIVE_INTEGRATION.md  PHASE3_SUMMARY.md  PREVFOLDER_REF.md  PROJECT_STRUCTURE_ANALYSIS.md  QUICK_DEBUG_REFERENCE.md  REFACTOR.md  REFACTORING_COMPLETE.md  RENDERER_REFACTORING_PLAN.md  RESTART_INSTRUCTIONS.md  RUST_MODULES_INTEGRATION_STATUS.md  RUST_MODULE_STATUS.md  SCROLLING_BUFFER_UPDATE.md  START_HERE.md  TAG_CLOUD_PLAN.md  TAG_REF.md  TESTING_INSTRUCTIONS.md  TESTING_PERSISTENCE.md  TESTING_RECOVERY.md  TEST_ROW_20_FIX.md  TEST_THESE_FIXES.md  THUMBNAIL_GEN_CLEANUP.md  THUMBNAIL_INTEGRATION_COMPLETE.md  THUMBNAIL_PRELOADER_TEST.md  THUMBNAIL_UI_INTEGRATION.md  THUMBNAIL_VS_PAUSE_ANALYSIS.md  VIDEO_CODEC_OPTIMIZATION.md  VIDEO_LOADING_FIX_SUMMARY.md  (+36 more)
scripts/: README.md  copy-native.js  migrate-folder-metadata.js  migrate-folder-metadata.ts  (+2 more)
src/thumbnail-generator-native/: Cargo.toml  index.d.ts  index.js  package-lock.json  package.json  test-native.js
src/thumbnail-generator-native/src/: cache.rs  ffmpeg.rs  generator.rs  lib.rs  types.rs
src/video-grid-wasm/: Cargo.toml  package-lock.json  package.json
src/video-grid-wasm/src/: filter.rs  lib.rs  reconcile.rs  sort.rs  state.rs  types.rs
src/video-scanner-native/: .gitignore  Cargo.toml  MIGRATION.md  README.md  package-lock.json  package.json
src/video-scanner-native/src/: lib.rs  scanner.rs  types.rs
(+77 files in other folders)
