[package]
name = "thumbnail-generator-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings
napi = { version = "3", features = ["async", "tokio_rt"] }
napi-derive = "3"

# FFmpeg bindings (version 8 for FFmpeg 8.x support)
ffmpeg-next = "8.0"
ffmpeg-sys-next = "8.0"

# Image processing
image = "0.25"

# Async runtime
tokio = { version = "1.40", features = ["rt-multi-thread", "fs", "sync"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"

# Hashing for cache keys
blake3 = "1.5"

# File system utilities
tempfile = "3.12"

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
criterion = "0.5"

[profile.release]
lto = true
strip = true
