[package]
name = "video-grid-wasm"
version = "0.1.0"
edition = "2021"

[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "--enable-bulk-memory", "--enable-mutable-globals", "--enable-nontrapping-float-to-int", "--enable-sign-ext"]

[lib]
crate-type = ["cdylib"]

[dependencies]
# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlElement",
] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Performance utilities
ahash = { version = "0.8", default-features = false, features = ["compile-time-rng", "std"] }  # Fast hashing (no runtime rng for WASM)
smallvec = "1.11"  # Stack-allocated vectors

# Better panic messages in WASM
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

# Enable aggressive optimizations for WASM
[profile.release.package."*"]
opt-level = 3
