[package]
name = "video-scanner-native"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# NAPI bindings for Node.js
napi = "2.16"
napi-derive = "2.16"

# Directory traversal
walkdir = "2.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/time handling
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
napi-build = "2.1"

[dev-dependencies]
tempfile = "3.12"

[profile.release]
lto = true
strip = true
